--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,13 @@ csv = "1.0.0-beta.3"
 serde = "1.0.11"
 serde_derive = "1.0.11"
 ansi_term = "0.9"
+#log = "0.3.8"
+#env_logger = "0.4.3"
+#error-chain = "0.10.0"
+
+slog = "2.0.6"
+slog-term = "2.1.0"
+slog-envlogger = "2.0.0"
+slog-stdlog = "3.0.2"
+slog-scope = "4.0.0"
+slog-async = "2.1.0"
